fixed z-index issue on iphone

--- a/src/css/board.less
+++ b/src/css/board.less
@@ -48,10 +48,6 @@ body{
 }
 
 @media screen and (max-width: 640px), screen and (max-height: 700px) {
-    body{
-        background-color:#1027BD;
-    }
-
     .board{
         background-color:#fff;
         .frame{
