--- a/src/css/popup.less
+++ b/src/css/popup.less
@@ -10,6 +10,7 @@
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color:transparent; /* Black w/ opacity */
+    z-index: 100;
     /* Modal Content/Box */
     .popupMain {
         background-color: #fefefe;
